# SVETlANNa

./: .gitignore  README.md  README.ru.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
docs/source/: conf.py
examples/: analytical_solutions.py  gaussian_beam_propagation.ipynb  optimize_example.ipynb  optimize_lowapi_example.ipynb  phase_retrieval_circle.ipynb  phase_retrieval_main.ipynb  rectangular_slit_propagation.ipynb  square_aperture_propagation.ipynb  wave_dispersion_slit.ipynb
examples/pipeline/: 01_dataset.ipynb  01_datasets.ipynb  02_mnist_pipeline.ipynb
svetlanna/: __init__.py  autoencoder.py  axes_math.py  beam_generator.py  clerk.py  detector.py  elements.py  optimize.py  parameters.py  phase_retrieval.py  phase_retrieval_problem.py  recurrent_reservoir.py  setup.py  simulation_parameters.py  transforms.py  wavefront.py
svetlanna/elements/: aperture.py  diffractive_layer.py  element.py  free_space.py  lens.py  reservoir.py  slm.py
svetlanna/phase_retrieval/: algorithms.py  phase_retrieval.py
svetlanna/phase_retrieval_problem/: algorithms.py  phase_retrieval.py  phase_retrieval_result.py
svetlanna/specs/: specs.py  specs_writer.py
svetlanna/static/: setup_widget.css  (+1 more)
tests/: test_analytic.py  test_apertures.py  test_autoencoder.py  test_clerk.py  test_detector.py  test_diffraction_peaks.py  test_element.py  test_elements.py  test_freespace.py  test_lens.py  test_lightpipes_comparison.py  test_nonlinear_element.py  test_parameters.py  test_phase_retrieval.py  test_setup.py  test_slm.py  test_specs_writer.py  test_types.py
(+3 files in other folders)
